// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props decimalDigits test 1`] = `
<div>
  <div
    class="nut-price "
  >
    <div
      class="nut-price__symbol nut-price__symbol-large"
    >
      ¥
    </div>
    <div
      class="nut-price__integer nut-price__integer-large"
    >
      15213
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      .
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      122
    </div>
  </div>
</div>
`;

exports[`props needSymbol and symbol test 1`] = `
<div>
  <div
    class="nut-price "
  >
    <div
      class="nut-price__symbol nut-price__symbol-large"
    >
      $
    </div>
    <div
      class="nut-price__integer nut-price__integer-large"
    >
      10010
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      .
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      00
    </div>
  </div>
</div>
`;

exports[`props test 1`] = `
<div>
  <div
    class="nut-price "
  >
    <div
      class="nut-price__integer nut-price__integer-large"
    >
      1,010
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      .
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      00
    </div>
  </div>
</div>
`;

exports[`props thousands test 1`] = `
<div>
  <div
    class="nut-price "
  >
    <div
      class="nut-price__symbol nut-price__symbol-large"
    >
      $
    </div>
    <div
      class="nut-price__integer nut-price__integer-large"
    >
      10010
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      .
    </div>
    <div
      class="nut-price__decimal nut-price__decimal-large"
    >
      01
    </div>
  </div>
</div>
`;
